// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BeautifyCommand Beautify should beautify using options in config file 1`] = `
Object {
  "exitCode": 0,
  "stderr": "",
  "stdout": "const test = \\"test\\";

",
}
`;

exports[`BeautifyCommand Beautify should beautify using options passed in cmd 1`] = `
Object {
  "exitCode": 0,
  "stderr": "",
  "stdout": "const test = \\"test\\";

",
}
`;

exports[`BeautifyCommand Beautify should find config file without specifying it 1`] = `
Object {
  "exitCode": 0,
  "stderr": "",
  "stdout": "const test = \\"test\\";

",
}
`;

exports[`BeautifyCommand Errors should throw an error saying cannot find language: json 1`] = `
Object {
  "exitCode": 1,
  "stderr": "Cannot find language.
",
  "stdout": "",
}
`;

exports[`BeautifyCommand Errors should throw an error saying language is required: json 1`] = `
Object {
  "exitCode": 1,
  "stderr": "A language is required.
",
  "stdout": "",
}
`;

exports[`BeautifyCommand Errors should throw an error suggesting JavaScript for language: json 1`] = `
Object {
  "exitCode": 1,
  "stderr": "Language 'javascript' was not found. Did you mean 'JavaScript'?
",
  "stdout": "",
}
`;

exports[`BeautifyCommand Errors should throw an error with invalid json: json 1`] = `
Object {
  "exitCode": 2,
  "stderr": "Unexpected end of JSON input
",
  "stdout": "",
}
`;
